recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return v;
             ^Min:22: warning: enclosing method min_helper has result type Unit: return value discarded
      return v;
      ^Min:36: error: type mismatch;
 found   : Unit
 required: Int
  return min_helper(l, last(l));
                   ^